src/scenes/opengl/scene_opengl.h
@@ -213,7 +213,7 @@ public:
     }
 
 private:
-    void renderPart(const QRect &rect, const QRect &partRect, const QPoint &textureOffset, bool rotated = false);
+    void renderPart(const QRect &rect, const QRect &partRect, const QPoint &textureOffset, qreal devicePixelRatio, bool rotated = false);
     static const QMargins texturePadForPart(const QRect &rect, const QRect &partRect);
     void resizeTexture();
     QScopedPointer<GLTexture> m_texture;
